--- a/public/404.html
+++ b/public/404.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eror 404</title>
+    <title>Error 404</title>
 </head>
+<style>
+    body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .error{
+        margin: auto;
+        display: block;
+        text-align: center;
+    }
+    img{
+        width: 300px;
+        height: 300px;
+    }
+</style>
 <body>
-    <h1>Error 404 pagina NO encontrada:((</h1>
+    <div class="error">
+        <h1>Error 404 pagina NO encontrada:((</h1>
+    <img src="./../image/triste.png">
+    </div>
 </body>
 </html>
